Changing embed to include when not using blocks. Closes https://github.com/inklabs/kommerce-core/issues/79

--- a/themes/bootstrap/templates/admin/product/index.twig
+++ b/themes/bootstrap/templates/admin/product/index.twig
@@ -20,7 +20,7 @@
                 <form action="{{ routeUrl('admin.product') }}"
                       method="get"
                       class="form-search">
-                    {% embed '@theme/helper/search-bar.twig' with {'placeholder': 'Search SKU/Name', 'queryString': queryString} only %}{% endembed %}
+                    {% include '@theme/helper/search-bar.twig' with {'placeholder': 'Search SKU/Name', 'queryString': queryString} only %}
                 </form>
 
                 {{ paginate.detailed(pagination) }}
