--- a/themes/bootstrap/templates/home/index.twig
+++ b/themes/bootstrap/templates/home/index.twig
@@ -3,7 +3,7 @@
 {% block pageTitle %}Welcome{% endblock %}
 
 {% block content %}
-    {% embed '@theme/helper/sitelinks-search.twig' only %}{% endembed %}
+    {% include '@theme/helper/sitelinks-search.twig' only %}
 
     <div class="container">
         <div class="row">
