--- a/themes/foundation/templates/helper/product_grid_small.twig
+++ b/themes/foundation/templates/helper/product_grid_small.twig
@@ -10,14 +10,14 @@
 
         <a href="{{ productUrl(product) }}">{{ productUrl(product) }}</a>
 
-        {% embed '@theme/helper/rating-stars.twig' with {'rating': product.rating } only %}{% endembed %}
+        {% include '@theme/helper/rating-stars.twig' with {'rating': product.rating } only %}
 
         {% if product.isInStock %}
             <div class="availability">
                 <span class="out-of-stock">Out of Stock</span>
             </div>
         {% elseif product.isPriceVisible %}
-            {% embed '@theme/helper/price.twig' with {'price': product.price } only %}{% endembed %}
+            {% include '@theme/helper/price.twig' with {'price': product.price } only %}
         {% endif %}
 
         <div style="clear: both;"></div>
