--- a/themes/bootstrap/templates/admin/coupon/index.twig
+++ b/themes/bootstrap/templates/admin/coupon/index.twig
@@ -20,7 +20,7 @@
                 <form action="{{ routeUrl('admin.coupon') }}"
                       method="get"
                       class="form-search">
-                    {% embed '@theme/helper/search-bar.twig' with {'placeholder': 'Search Name', 'queryString': queryString} only %}{% endembed %}
+                    {% include '@theme/helper/search-bar.twig' with {'placeholder': 'Search Name', 'queryString': queryString} only %}
                 </form>
 
                 {{ paginate.detailed(pagination) }}
