--- a/themes/bootstrap/templates/admin/user/index.twig
+++ b/themes/bootstrap/templates/admin/user/index.twig
@@ -13,7 +13,7 @@
                 <form action="{{ routeUrl('admin.user') }}"
                       method="get"
                       class="form-search">
-                    {% embed '@theme/helper/search-bar.twig' with {'placeholder': 'Search Name/Email', 'queryString': queryString} only %}{% endembed %}
+                    {% include '@theme/helper/search-bar.twig' with {'placeholder': 'Search Name/Email', 'queryString': queryString} only %}
                 </form>
 
                 {{ paginate.detailed(pagination) }}
