--- a/themes/bootstrap/templates/cart/show.twig
+++ b/themes/bootstrap/templates/cart/show.twig
@@ -45,7 +45,7 @@
                                                     <small>{{ cartItem.fullSku }}</small>
                                                 </div>
 
-                                                {% embed '@theme/cart/parts/cart-item-options.twig' with {'cartItem': cartItem } only %}{% endembed %}
+                                                {% include '@theme/cart/parts/cart-item-options.twig' with {'cartItem': cartItem } only %}
                                             </td>
                                             <td class="text-right">
                                                 <form action="{{ routeUrl('cart.update-quantity') }}" method="post" role="form">
@@ -73,11 +73,11 @@
                                                     </span>
                                                 </form>
                                                 <div class="visible-xs">
-                                                    {% embed '@theme/helper/unit-price.twig' with {'price': cartItem.price } only %}{% endembed %}
+                                                    {% include '@theme/helper/unit-price.twig' with {'price': cartItem.price } only %}
                                                 </div>
                                             </td>
                                             <td class="text-right hidden-xs">
-                                                {% embed '@theme/helper/unit-price.twig' with {'price': cartItem.price } only %}{% endembed %}
+                                                {% include '@theme/helper/unit-price.twig' with {'price': cartItem.price } only %}
                                             </td>
                                             <td class="text-right">
                                                 {{ cartItem.price.quantityPrice | displayPrice }}
@@ -90,7 +90,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-7 col-sm-offset-5">
-                                {% embed '@theme/cart/parts/totals.twig' %}{% endembed %}
+                                {% include '@theme/cart/parts/totals.twig' %}
                             </div>
                         </div>
                     </div>
@@ -101,10 +101,10 @@
                                 <span class="price-small">{{ cart.cartTotal.total | displayPrice }}</span>
                             </strong>
                             <br /><br />
-                            {% embed '@theme/helper/checkout-button.twig' only %}{% endembed %}
+                            {% include '@theme/helper/checkout-button.twig' only %}
                         </div>
                         {% if cart.shipmentRate.rate is not null %}
-                            {% embed '@theme/cart/parts/modify-shipping-button.twig' with {'extraClass': 'btn-block'} %}{% endembed %}
+                            {% include '@theme/cart/parts/modify-shipping-button.twig' with {'extraClass': 'btn-block'} %}
                         {% endif %}
 
                         <br>
@@ -122,8 +122,7 @@
                 </div>
             {% endif %}
 
-            {% embed '@theme/helper/recommended-products.twig' with {'products': recommendedProducts, 'size': 'small' } only %}
-            {% endembed %}
+            {% include '@theme/helper/recommended-products.twig' with {'products': recommendedProducts, 'size': 'small' } only %}
         </div>
     </div>
 {% endblock %}
