--- a/themes/bootstrap/templates/helper/recommended-products.twig
+++ b/themes/bootstrap/templates/helper/recommended-products.twig
@@ -4,11 +4,9 @@
             <hr />
             <h2 class="text-center">{% block title %}You Might Also Like{% endblock %}</h2>
             {% if size == 'small' %}
-                {% embed '@theme/helper/product-grid-small.twig' with {'products': products } only %}
-                {% endembed %}
+                {% include '@theme/helper/product-grid-small.twig' with {'products': products } only %}
             {% else %}
-                {% embed '@theme/helper/product-grid.twig' with {'products': products } only %}
-                {% endembed %}
+                {% include '@theme/helper/product-grid.twig' with {'products': products } only %}
             {% endif %}
         </div>
     </div>
