--- a/themes/bootstrap/templates/user/view-order.twig
+++ b/themes/bootstrap/templates/user/view-order.twig
@@ -10,6 +10,6 @@
 
 {% block content %}
     <div class="container">
-        {% embed '@theme/helper/order-details.twig' with {'order': order} only %}{% endembed %}
+        {% include '@theme/helper/order-details.twig' with {'order': order} only %}
     </div>
 {% endblock %}
