--- a/themes/foundation/templates/helper/product_grid.twig
+++ b/themes/foundation/templates/helper/product_grid.twig
@@ -9,12 +9,12 @@
     </a>
     <a href="{{ productUrl(product) }}">{{ productUrl(product) }}</a>
 
-    {% embed '@theme/helper/rating-stars.twig' with {'rating': product.rating } only %}{% endembed %}
+    {% include '@theme/helper/rating-stars.twig' with {'rating': product.rating } only %}
 
     {% if product.isInStock %}
         Out of Stock
     {% elseif product.isPriceVisible %}
-        {% embed '@theme/helper/price.twig' with {'price': product.price } only %}{% endembed %}
+        {% include '@theme/helper/price.twig' with {'price': product.price } only %}
     {% endif %}
 
 {% endfor %}
