--- a/themes/foundation/templates/helper/recommended_products.twig
+++ b/themes/foundation/templates/helper/recommended_products.twig
@@ -1,10 +1,8 @@
 {% if products is not empty %}
     <h2>{% block title %}You Might Also Like{% endblock %}</h2>
     {% if size == 'small' %}
-        {% embed '@theme/helper/product-grid-small.twig' with {'products': products } only %}
-        {% endembed %}
+        {% include '@theme/helper/product-grid-small.twig' with {'products': products } only %}
     {% else %}
-        {% embed '@theme/helper/product-grid.twig' with {'products': products } only %}
-        {% endembed %}
+        {% include '@theme/helper/product-grid.twig' with {'products': products } only %}
     {% endif %}
 {% endif %}
