Removing typo characters

--- a/themes/bootstrap/templates/admin/coupon/edit.twig
+++ b/themes/bootstrap/templates/admin/coupon/edit.twig
@@ -193,8 +193,8 @@
 
                         <div class="well">
                             <div class="pull-right text-muted text-right">
-                                <span title="Created">{{ coupon.createdFormatted }}<?</span><br>
-                                <span title="Updated">{{ coupon.updatedFormatted }}<?</span><br>
+                                <span title="Created">{{ coupon.createdFormatted }}</span><br>
+                                <span title="Updated">{{ coupon.updatedFormatted }}</span><br>
                             </div>
 
                             <button type="submit" class="btn btn-primary" data-loading-text="Saving...">
