--- a/themes/bootstrap/templates/admin/tag/edit.twig
+++ b/themes/bootstrap/templates/admin/tag/edit.twig
@@ -94,8 +94,8 @@
 
                         <div class="well">
                             <div class="pull-right text-muted text-right">
-                                <span title="Created">{{ tag.createdFormatted }}<?</span><br>
-                                <span title="Updated">{{ tag.updatedFormatted }}<?</span><br>
+                                <span title="Created">{{ tag.createdFormatted }}</span><br>
+                                <span title="Updated">{{ tag.updatedFormatted }}</span><br>
                             </div>
 
                             <button type="submit" class="btn btn-primary" data-loading-text="Saving...">
