--- a/themes/bootstrap/templates/admin/product/edit.twig
+++ b/themes/bootstrap/templates/admin/product/edit.twig
@@ -174,8 +174,8 @@
 
                         <div class="well">
                             <div class="pull-right text-muted text-right">
-                                <span title="Created">{{ product.createdFormatted }}<?</span><br>
-                                <span title="Updated">{{ product.updatedFormatted }}<?</span><br>
+                                <span title="Created">{{ product.createdFormatted }}</span><br>
+                                <span title="Updated">{{ product.updatedFormatted }}</span><br>
                             </div>
 
                             <button type="submit" class="btn btn-primary" data-loading-text="Saving...">
