--- a/themes/bootstrap/templates/admin/promotion/catalog-promotion/edit.twig
+++ b/themes/bootstrap/templates/admin/promotion/catalog-promotion/edit.twig
@@ -144,8 +144,8 @@
 
                         <div class="well">
                             <div class="pull-right text-muted text-right">
-                                <span title="Created">{{ catalogPromotion.createdFormatted }}<?</span><br>
-                                <span title="Updated">{{ catalogPromotion.updatedFormatted }}<?</span><br>
+                                <span title="Created">{{ catalogPromotion.createdFormatted }}</span><br>
+                                <span title="Updated">{{ catalogPromotion.updatedFormatted }}</span><br>
                             </div>
 
                             <button type="submit" class="btn btn-primary" data-loading-text="Saving...">
