--- a/themes/bootstrap/templates/admin/promotion/catalog-promotion/parts/actions.twig
+++ b/themes/bootstrap/templates/admin/promotion/catalog-promotion/parts/actions.twig
@@ -14,7 +14,7 @@
                       method="post"
                       role="form">
                     {{ form.csrf() }}
-                    {{ form.hidden('catalog-promotionId', catalogPromotion.id.hex) }}
+                    {{ form.hidden('catalogPromotionId', catalogPromotion.id.hex) }}
 
                     <button type="submit" class="btn btn-danger btn-xs">
                         <i class="fa fa-trash"></i>
