--- a/themes/bootstrap/templates/admin/option/parts/actions.twig
+++ b/themes/bootstrap/templates/admin/option/parts/actions.twig
@@ -2,6 +2,9 @@
 
 <div class="row">
     <div class="col-sm-6">
+        Option - {{ option.name }}
+        <br>
+        <br>
     </div>
 
     <div class="col-sm-6">
