Changing to minus to indicate data deletion.

--- a/themes/bootstrap/templates/admin/option/values.twig
+++ b/themes/bootstrap/templates/admin/option/values.twig
@@ -25,7 +25,7 @@
                                     {{ form.csrf() }}
                                     {{ form.hidden('optionId', option.id.hex) }}
                                     {{ form.hidden('optionValueId', optionValue.id.hex) }}
-                                    <button type="submit" class="btn btn-danger btn-xs" title="Delete Option Value"><i class="fa fa-minus"></i></button>
+                                    <button type="submit" class="btn btn-danger btn-xs" title="Delete Option Value"><i class="fa fa-remove"></i></button>
                                 </form>
                             </td>
                         {% endblock %}
