Add admin option - edit option products. Relates to https://github.com/inklabs/kommerce-core/issues/70

--- a/themes/bootstrap/templates/admin/option/parts/navigation.twig
+++ b/themes/bootstrap/templates/admin/option/parts/navigation.twig
@@ -11,7 +11,7 @@
     },
     {
         'name': 'Option Products <span class="text-muted">(' ~ option.optionProducts|length ~ ')</span>',
-        'url' : routeUrl('admin.option.products', {'optionId': option.id.hex})
+        'url' : routeUrl('admin.option.option-products', {'optionId': option.id.hex})
     },
     {
         'name': 'Tags <span class="text-muted">(' ~ option.tags|length ~ ')</span>',
