--- a/themes/bootstrap/templates/admin/option/index.twig
+++ b/themes/bootstrap/templates/admin/option/index.twig
@@ -9,6 +9,13 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
+                <div class="pull-right">
+                    <a href="{{ routeUrl('admin.option.new') }}"
+                       class="btn btn-success btn-xs">
+                        <i class="fa fa-plus-circle"></i> New Option
+                    </a>
+                </div>
+
                 <h1>Options</h1>
                 <form action="{{ routeUrl('admin.option') }}"
                       method="get"
