--- a/themes/bootstrap/templates/admin/tag/new.twig
+++ b/themes/bootstrap/templates/admin/tag/new.twig
@@ -1,28 +1,28 @@
-{# @var option \inklabs\kommerce\EntityDTO\OptionDTO #}
+{# @var tag \inklabs\kommerce\EntityDTO\TagDTO #}
 {% extends '@theme/layout/base-admin.twig' %}
 
-{% block pageTitle %}New Option{% endblock %}
+{% block pageTitle %}New Tag{% endblock %}
 
 {% block content %}
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h3>New Option</h3>
-                <form action="{{ routeUrl('admin.option.new.post') }}"
+                <h3>New Tag</h3>
+                <form action="{{ routeUrl('admin.tag.new.post') }}"
                       method="post"
                       class="form-horizontal"
                       role="form">
                     <fieldset>
                         {{ form.csrf() }}
                         <div class="well">
-                            {% include '@theme/admin/option/parts/option-intput-fields.twig' %}
+                            {% include '@theme/admin/tag/parts/tag-intput-fields.twig' %}
                         </div>
 
                         <div class="well">
                             <button type="submit" class="btn btn-primary">
                                 <i class="fa fa-check-circle"></i> Create
                             </button>
-                            <a href="{{ routeUrl('admin.option') }}" class="btn btn-default">Cancel</a>
+                            <a href="{{ routeUrl('admin.tag') }}" class="btn btn-default">Cancel</a>
                         </div>
                     </fieldset>
                 </form>
