--- a/themes/bootstrap/templates/admin/product/new.twig
+++ b/themes/bootstrap/templates/admin/product/new.twig
@@ -1,34 +1,26 @@
 {# @var product \inklabs\kommerce\EntityDTO\ProductDTO #}
 {% extends '@theme/layout/base-admin.twig' %}
 
-{% block pageTitle %}Product - {{ product.name }}{% endblock %}
+{% block pageTitle %}New Product{% endblock %}
 
 {% block content %}
     <div class="container">
-
-        {% include '@theme/admin/product/parts/header.twig' %}
-
         <div class="row">
             <div class="col-sm-12">
-                <form action="{{ routeUrl('admin.product.edit.post') }}"
+                <h3>New Product</h3>
+                <form action="{{ routeUrl('admin.product.new.post') }}"
                       method="post"
                       class="form-horizontal"
                       role="form">
                     <fieldset>
                         {{ form.csrf() }}
-                        {{ form.hidden('productId', product.id.hex ) }}
                         <div class="well">
                             {% include '@theme/admin/product/parts/product-intput-fields.twig' %}
                         </div>
 
                         <div class="well">
-                            <div class="pull-right text-muted text-right">
-                                <span title="Created">{{ product.createdFormatted }}</span><br>
-                                <span title="Updated">{{ product.updatedFormatted }}</span><br>
-                            </div>
-
-                            <button type="submit" class="btn btn-primary" data-loading-text="Saving...">
-                                <i class="fa fa-check-circle"></i> Save
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fa fa-check-circle"></i> Create
                             </button>
                             <a href="{{ routeUrl('admin.product') }}" class="btn btn-default">Cancel</a>
                         </div>
