--- a/themes/bootstrap/templates/layout/admin-parts/header.twig
+++ b/themes/bootstrap/templates/layout/admin-parts/header.twig
@@ -37,7 +37,18 @@
                         <li><a href="{{ routeUrl('admin.cart-price-rule') }}">Cart Price Rules</a></li>
                     </ul>
                 </li>
-                <li><a href="{{ routeUrl('admin.settings') }}">Settings</a></li>
+                <li class="dropdown">
+                    <a href="#"
+                       class="dropdown-toggle"
+                       data-toggle="dropdown"
+                       role="button"
+                       aria-haspopup="true"
+                       aria-expanded="false">Settings <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ routeUrl('admin.settings.sales-tax') }}">Sales Tax Rules</a></li>
+                    </ul>
+                </li>
 
                 <li class="divider-vertical hidden-xs"></li>
             </ul>
