--- a/themes/bootstrap/templates/admin/settings/sales-tax/index.twig
+++ b/themes/bootstrap/templates/admin/settings/sales-tax/index.twig
@@ -23,84 +23,122 @@
                     <div id="zipcode-rates" class="fluid-control-group">
                         {% for taxRate in zip5TaxRates %}
                             <div class="row">
-                                {% embed '@theme/admin/settings/sales-tax/parts/tax-rate-input-fields.twig' %}
-                                    {% block head %}
-                                        {{ form.hidden('type', 'zip5TaxRate') }}
-                                        <div class="form-group col-sm-4">
-                                            <label for="taxRate-{{ taxRate.id.hex }}-zip5" class="control-label">Zipcode</label>
-                                            <input type="text"
-                                                   id="taxRate-{{ taxRate.id.hex }}-zip5"
-                                                   name="taxRate[zip5]"
-                                                   value="{{ taxRate.zip5 }}"
-                                                   class="form-control"
-                                                   maxlength="5"
-                                                   required=""/>
-                                        </div>
-                                    {% endblock %}
-                                {% endembed %}
+                                <form action="{{ routeUrl('admin.settings.sales-tax.edit') }}"
+                                      method="post"
+                                      class="form">
+                                    {{ form.csrf() }}
+                                    {{ form.hidden('taxRateId', taxRate.id.hex) }}
+
+                                    {% include '@theme/admin/settings/sales-tax/parts/zip5-tax-rate-input-fields.twig' %}
+
+                                    <div class="form-group col-sm-2">
+                                        <br>
+                                        <button type="submit" name="action" value="delete" class="btn btn-danger btn-xs pull-right" title="Delete Tax Rate"><i class="fa fa-remove"></i></button>
+                                        <button type="submit" name="action" value="edit" class="btn btn-default btn-xs pull-right" title="Edit Tax Rate">Update</button>
+                                    </div>
+                                </form>
                             </div>
                         {% endfor %}
-                    </div>
 
-                    <hr />
+                        <hr>
+                        <h3>Add Tax Rate:</h3>
+                        <div class="row">
+                            <form action="{{ routeUrl('admin.settings.sales-tax.new') }}"
+                                  method="post"
+                                  class="form">
+                                {{ form.csrf() }}
+                                {{ form.hidden('taxRateId', taxRate.id.hex) }}
+
+                                {% include '@theme/admin/settings/sales-tax/parts/zip5-tax-rate-input-fields.twig' %}
+
+                                <div class="form-group col-sm-2">
+                                    <br>
+                                    <button type="submit" class="btn btn-default btn-xs pull-right" title="Add Tax Rate">Create</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="well well-sm">
                     <h2>Zipcode Range Rates</h2>
                     <div id="zipcode-rates" class="fluid-control-group">
                         {% for taxRate in zip5RangeTaxRates %}
                             <div class="row">
-                                {% embed '@theme/admin/settings/sales-tax/parts/tax-rate-input-fields.twig' %}
-                                    {% block head %}
-                                        {{ form.hidden('type', 'zip5RangeTaxRate') }}
-                                        <div class="form-group col-sm-2">
-                                            <label for="taxRate-{{ taxRate.id.hex }}-zip5From" class="control-label">Start</label>
-                                            <input type="text"
-                                                   id="taxRate-{{ taxRate.id.hex }}-zip5From"
-                                                   name="taxRate[zip5From]"
-                                                   value="{{ taxRate.zip5From }}"
-                                                   class="form-control"
-                                                   maxlength="5"
-                                                   required=""/>
-                                        </div>
-                                        <div class="form-group col-sm-2">
-                                            <label for="taxRate-{{ taxRate.id.hex }}-zip5To" class="control-label">End</label>
-                                            <input type="text"
-                                                   id="taxRate-{{ taxRate.id.hex }}-zip5To"
-                                                   name="taxRate[zip5To]"
-                                                   value="{{ taxRate.zip5To }}"
-                                                   class="form-control"
-                                                   maxlength="5"
-                                                   required=""/>
-                                        </div>
-                                    {% endblock %}
-                                {% endembed %}
+                                <form action="{{ routeUrl('admin.settings.sales-tax.edit') }}"
+                                      method="post"
+                                      class="form">
+                                    {{ form.csrf() }}
+                                    {{ form.hidden('taxRateId', taxRate.id.hex) }}
+
+                                    {% include '@theme/admin/settings/sales-tax/parts/zip5-range-tax-rate-input-fields.twig' %}
+
+                                    <div class="form-group col-sm-2">
+                                        <br>
+                                        <button type="submit" name="action" value="delete" class="btn btn-danger btn-xs pull-right" title="Delete Tax Rate"><i class="fa fa-remove"></i></button>
+                                        <button type="submit" name="action" value="edit" class="btn btn-default btn-xs pull-right" title="Edit Tax Rate">Update</button>
+                                    </div>
+                                </form>
                             </div>
                         {% endfor %}
-                    </div>
 
+                        <hr>
+                        <h3>Add Tax Rate:</h3>
+                        <div class="row">
+                            <form action="{{ routeUrl('admin.settings.sales-tax.new') }}"
+                                  method="post"
+                                  class="form">
+                                {{ form.csrf() }}
+                                {{ form.hidden('taxRateId', taxRate.id.hex) }}
+
+                                {% include '@theme/admin/settings/sales-tax/parts/zip5-range-tax-rate-input-fields.twig' %}
+
+                                <div class="form-group col-sm-2">
+                                    <br>
+                                    <button type="submit" class="btn btn-default btn-xs pull-right" title="Add Tax Rate">Create</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="well well-sm">
                     <hr />
                     <h2>State Rates</h2>
                     <div id="zipcode-rates" class="fluid-control-group">
                         {% for taxRate in stateTaxRates %}
                             <div class="row">
-                                {% embed '@theme/admin/settings/sales-tax/parts/tax-rate-input-fields.twig' %}
-                                    {% block head %}
-                                        {{ form.hidden('type', 'stateTaxRate') }}
-                                        <div class="form-group col-sm-4">
-                                            <label for="taxRate-{{ taxRate.id.hex }}-state" class="control-label">State</label>
-                                            {{ form.select(
-                                                'taxRate[state]',
-                                                taxRate.state,
-                                                validStatesMap,
-                                                'coupon-type',
-                                                'form-control input-sm',
-                                                {
-                                                    'required': 'true'
-                                                }
-                                            ) }}
-                                        </div>
-                                    {% endblock %}
-                                {% endembed %}
+                                <form action="{{ routeUrl('admin.settings.sales-tax.edit') }}"
+                                      method="post"
+                                      class="form">
+                                    {{ form.csrf() }}
+                                    {{ form.hidden('taxRateId', taxRate.id.hex) }}
+
+                                    {% include '@theme/admin/settings/sales-tax/parts/state-tax-rate-input-fields.twig' %}
+
+                                    <div class="form-group col-sm-2">
+                                        <br>
+                                        <button type="submit" name="action" value="delete" class="btn btn-danger btn-xs pull-right" title="Delete Tax Rate"><i class="fa fa-remove"></i></button>
+                                        <button type="submit" name="action" value="edit" class="btn btn-default btn-xs pull-right" title="Edit Tax Rate">Update</button>
+                                    </div>
+                                </form>
                             </div>
                         {% endfor %}
+                        <hr>
+                        <h3>Add Tax Rate:</h3>
+                        <div class="row">
+                            <form action="{{ routeUrl('admin.settings.sales-tax.new') }}"
+                                  method="post"
+                                  class="form">
+                                {{ form.csrf() }}
+                                {{ form.hidden('taxRateId', taxRate.id.hex) }}
+
+                                {% include '@theme/admin/settings/sales-tax/parts/state-tax-rate-input-fields.twig' %}
+
+                                <div class="form-group col-sm-2">
+                                    <br>
+                                    <button type="submit" class="btn btn-default btn-xs pull-right" title="Add Tax Rate">Create</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
