--- a/themes/bootstrap/templates/admin/settings/sales-tax/index.twig
+++ b/themes/bootstrap/templates/admin/settings/sales-tax/index.twig
@@ -47,13 +47,15 @@
                                   method="post"
                                   class="form">
                                 {{ form.csrf() }}
-                                {{ form.hidden('taxRateId', taxRate.id.hex) }}
 
                                 {% include '@theme/admin/settings/sales-tax/parts/zip5-tax-rate-input-fields.twig' %}
 
                                 <div class="form-group col-sm-2">
                                     <br>
-                                    <button type="submit" class="btn btn-default btn-xs pull-right" title="Add Tax Rate">Create</button>
+                                    <button type="submit" class="btn btn-primary btn-sm pull-right" title="Add Tax Rate">
+                                        <i class="fa fa-check-circle"></i>
+                                        Create
+                                    </button>
                                 </div>
                             </form>
                         </div>
@@ -88,13 +90,15 @@
                                   method="post"
                                   class="form">
                                 {{ form.csrf() }}
-                                {{ form.hidden('taxRateId', taxRate.id.hex) }}
 
                                 {% include '@theme/admin/settings/sales-tax/parts/zip5-range-tax-rate-input-fields.twig' %}
 
                                 <div class="form-group col-sm-2">
                                     <br>
-                                    <button type="submit" class="btn btn-default btn-xs pull-right" title="Add Tax Rate">Create</button>
+                                    <button type="submit" class="btn btn-primary btn-sm pull-right" title="Add Tax Rate">
+                                        <i class="fa fa-check-circle"></i>
+                                        Create
+                                    </button>
                                 </div>
                             </form>
                         </div>
@@ -129,13 +133,15 @@
                                   method="post"
                                   class="form">
                                 {{ form.csrf() }}
-                                {{ form.hidden('taxRateId', taxRate.id.hex) }}
 
                                 {% include '@theme/admin/settings/sales-tax/parts/state-tax-rate-input-fields.twig' %}
 
                                 <div class="form-group col-sm-2">
                                     <br>
-                                    <button type="submit" class="btn btn-default btn-xs pull-right" title="Add Tax Rate">Create</button>
+                                    <button type="submit" class="btn btn-primary btn-sm pull-right" title="Add Tax Rate">
+                                        <i class="fa fa-check-circle"></i>
+                                        Create
+                                    </button>
                                 </div>
                             </form>
                         </div>
